<resources>
    <string name="app_name">RedditCloneAndroid</string>
    <string name="splash_screen">Splash screen</string>
    <string name="dobrodosli">Dobrodosli u RedditClone</string>
    <string name="prijava">Prijavite se</string>
    <string name="korisnicko_ime">Korisnicko ime:</string>
    <string name="lozinka">Lozinka:</string>
    <string name="korisnicko_ime_hint">Korisnicko ime</string>
    <string name="lozinka_hint">Lozinka</string>
    <string name="prijava_dugme">Prijavi se</string>
    <string name="registruj_se">Nemate nalog? Registrujte se</string>
    <string name="registracija">Registrujte se</string>
    <string name="registracija_dugme">Registruj se</string>
    <string name="prijavi_se">Vec imate nalog? Prijavite se</string>
    <string name="email">Email:</string>
    <string name="email_hint">Email</string>
    <string name="avatar">Odaberi sliku:</string>
    <string name="avatar_button">Odaberi sliku</string>
    <string name="datum_registracije">Datum:</string>
    <string name="datum_registracije_button">Odaberi datum</string>
    <string name="selektovani_datum"></string>
    <string name="datum_registracije_odabrani">Odabrani datum je:</string>
    <string name="gost">Nastavite kao gost</string>
    <string name="col1">Name</string>
    <string name="col2">Age</string>
    <string name="col3">Surname</string>
    <string name="row1Name">Ali</string>
    <string name="row1Age">51</string>
    <string name="row1Surname">Mohammad</string>
    <string name="row2Name">Dave</string>
    <string name="row2Age">45</string>
    <string name="row2Surname">Smith</string>
    <string name="row3Name">Jason</string>
    <string name="row3Age">67</string>
    <string name="row3Surname">William</string>
    <string name="community_post">Community</string>
    <string name="title_post">Title</string>
    <string name="text_post">Text</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="sync_data">Sync data</string>
    <string name="places">Places</string>
    <string name="home_long">Map</string>
    <string name="places_long">Places to review</string>
    <string name="preferences_long">Change your preferences</string>
    <string name="about_long">Get to know about us</string>
    <string name="sync_data_long">Sync data from the repo</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new">New</string>
    <string name="administrator">Deo za administratora:</string>
    <string name="moderator">Deo za moderatora:</string>
    <string name="korisnik">Deo za korisnika:</string>
    <string name="profil_korisnika">Profil</string>
    <string name="odjava">Odjava</string>
    <string name="odjava_sa_sistema">Odjavi se sa sistema</string>
    <string name="podesavanja_profila">Podesavanja profila</string>
    <string name="promeni_lozinku">Promeni lozinku:</string>
    <string name="promeni_lozinku_dva">Promeni</string>
    <string name="prikazi_ime">Prikazi ime (opciono i ne menja Vase korisnicko ime):</string>
    <string name="opis_profila">Opis profila (opciono):</string>
    <string name="opis_profila_dva">Opis profila (opciono)</string>
    <string name="avatar_profil">Avatar:</string>
    <string name="ukucaj_ime_opciono">Ukucaj ime (opciono)</string>
    <string name="odaberite_vasu_avatar_sliku">Odaberite Vasu avatar sliku</string>
    <string name="sacuvaj_izmene_button">Sacuvaj izmene</string>
    <string name="odustani_button">Odustani</string>
    <string name="suspendovanje_zajednice">Suspendovanje zajednice</string>
    <string name="uklanjanje_moderatora">Uklanjanje moderatora</string>
    <string name="blokiranje_korisnika">Blokiranje korisnika</string>
    <string name="spisak_neprikladnog_sadrzaja">Spisak neprikladnog sadrzaja</string>
    <string name="spisak_zajednica">Spisak zajednica</string>
    <string name="ime_zajednice">Zajednica</string>
    <string name="suspenduj_button">Suspenduj</string>
    <string name="zajednica_jedan">zajednica 1</string>
    <string name="zajednica_dva">zajednica 2</string>
    <string name="zajednica_tri">zajednica 3</string>
    <string name="spisak_moderatora">Spisak moderatora</string>
    <string name="ime_moderatora">Moderator</string>
    <string name="ukloni_moderatora_button">Ukloni</string>
    <string name="moderator_jedan">moderator 1</string>
    <string name="moderator_dva">moderator 2</string>
    <string name="moderator_tri">moderator 3</string>
    <string name="nazad">Nazad</string>
    <string name="spisak_prijava">Spisak prijava neprikladnog sadrzaja</string>
    <string name="neprikladan_sadrzaj">Neprikladan sadrzaj</string>
    <string name="redni_broj">Redni broj</string>
    <string name="razlog">Razlog</string>
    <string name="vreme_prijave">Vreme</string>
    <string name="ime_korisnika">Korisnik</string>
    <string name="redni_broj_jedan">1.</string>
    <string name="redni_broj_dva">2.</string>
    <string name="redni_broj_tri">3.</string>
    <string name="razlog_jedan">krsenje pravila</string>
    <string name="razlog_dva">mrznja</string>
    <string name="razlog_tri">autorska prava</string>
    <string name="vreme_jedan">25.04.2022. 11:00</string>
    <string name="vreme_dva">26.04.2022. 12:00</string>
    <string name="vreme_tri">27.04.2022. 13:00</string>
    <string name="ime_korisnika_jedan">korisnik1</string>
    <string name="ime_korisnika_dva">korisnik2</string>
    <string name="ime_korisnika_tri">korisnik3</string>
    <string name="svidja_mi_se">Svidja mi se</string>
    <string name="ne_svidja_mi_se">Ne svidja mi se</string>
    <string name="poseti_zajednicu_button">Poseti zajednicu</string>
    <string name="pregledaj_komentare_button">Pregledaj komentare</string>
    <string name="kreiranje_objave">Kreiraj objavu</string>
    <string name="kreiranje_zajednice">Kreiraj zajednicu</string>
    <string name="prijavi_neprikladan_sadrzaj">Prijavi ovu objavu</string>
    <string name="promena_lozinke_tekst">Promena lozinke</string>
    <string name="trenutna_lozinka">Molimo unesite trenutnu lozinku:</string>
    <string name="trenutna_lozinka_dva">Molimo unesite trenutnu lozinku</string>
    <string name="nova_lozinka">Molimo unesite novu lozinku:</string>
    <string name="nova_lozinka_dva">Molimo unesite novu lozinku</string>
    <string name="ponovljena_lozinka">Molimo ponovo unesite novu lozinku:</string>
    <string name="ponovljena_lozinka_dva">Molimo ponovo unesite novu lozinku</string>
    <string name="odustani">Odustani</string>
    <string name="prijavi_sadrzaj">Prijavi neprikladan sadrzaj</string>
    <string name="krsenje_pravila">Krsenje pravila</string>
    <string name="uznemiravanje">Uznemiravanje</string>
    <string name="mrznja">Mrznja</string>
    <string name="deljenje_licnih_podataka">Deljenje licnih podataka</string>
    <string name="drugo">Drugo</string>
    <string name="lazno_predstavljanje">Lazno predstavljanje</string>
    <string name="krsenje_autorskih_prava">Krsenje autorskih prava</string>
    <string name="krsenje_ziga">Krsenje ziga</string>
    <string name="nezeljen_sadrzaj">Nezeljen sadrzaj</string>
    <string name="samo">Samopovreda ili samoubistvo</string>
    <string name="prijavi_sadrzaj_button">Prijavi sadrzaj</string>
    <string name="kreiraj_objavu">Kreiraj objavu</string>
    <string name="naslov_objave">Naslov:</string>
    <string name="naslov_objave_dva">Naslov</string>
    <string name="tekst_objave">Tekst:</string>
    <string name="tekst_objave_dva">Tekst</string>
    <string name="datum_kreiranja">Datum:</string>
    <string name="slika_objave">Slika:</string>
    <string name="slika_objave_dva">Odaberi sliku</string>
    <string name="naziv_zajednice">Zajednica:</string>
    <string name="ime_zajednice_create">Ime:</string>
    <string name="ime_zajednice_create_dva">Ime</string>
    <string name="opis_zajednice">Opis:</string>
    <string name="opis_zajednice_dva">Opis</string>
    <string name="pravila_zajednice">Pravila:</string>
    <string name="pravila_zajednice_dva">Pravila</string>
    <string name="kreiranje_zajednice_create">Kreiraj zajednicu</string>
    <string name="reply_comment">Odgovori na komentar</string>
    <string name="prijavi_komentar">Prijavi ovaj komentar</string>
    <string name="dodavanje_novog_taga">Dodaj novi tag</string>
    <string name="tag">Naziv taga:</string>
    <string name="tag_dva">Naziv taga</string>
    <string name="kreiraj_tag">Kreiraj tag</string>
    <string name="dodaj_novi_tag">Dodaj novi tag</string>
    <string name="azuriraj_listu_pravila">Azuriraj listu pravila</string>
    <string name="lista_pravila">Lista pravila:</string>
    <string name="lista_pravila_dva">Lista pravila</string>
    <string name="prijava_kao_administrator">Prijavite se kao administrator</string>
    <string name="prijava_kao_korisnik">Prijavite se kao korisnik</string>
    <string name="pregled_objava">Pregled objava</string>
    <string name="pregled_zajednica">Pregled zajednica</string>
    <string name="komentari_jedan">Komentari sa objave 1</string>
    <string name="komentari_dva">Komentari sa objave 2</string>
    <string name="komentari_tri">Komentari sa objave 3</string>
    <string name="pregled_objava_kao_gost">Pregled objava kao gost</string>
    <string name="pregled_komentara_kao_gost">Pregled komentara kao gost</string>
    <string name="objave_jedan">Objave sa zajednice 1</string>
    <string name="objave_dva">Objave sa zajednice 2</string>
    <string name="objave_tri">Objave sa zajednice 3</string>
    <string name="ocenjivanje_objava">Ocenjivanje objava</string>
    <string name="ocenjivanje_komentara">Ocenjivanje komentara</string>
    <string name="sortiranje_objava">Sortiranje objava</string>
    <string name="sortiranje_komentara">Sortiranje komentara</string>
</resources>